objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Active Record for Agile Assessment</description>
        <inlineHelpText>Uncheck to remove this record.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Addition_of_Workflow_Requirement__c</fullName>
        <description>Additional workflow requirement, i.e., addition of workflow to a heretofore fill and print form.</description>
        <inlineHelpText>Additional workflow requirement, i.e., addition of workflow to a heretofore fill and print form.</inlineHelpText>
        <label>Addition of Workflow Requirement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0: Not Required</fullName>
                </value>
                <value>
                    <fullName>1: Desired if no cost to owner</fullName>
                </value>
                <value>
                    <fullName>2: Required and owner willing to pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AppID_Name__c</fullName>
        <description>Merged formula to display both Application ID and Name in the search. 2019.02.12, BAP Provisioning</description>
        <formula>Name &amp; " " &amp; Application_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AppID/Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person responsible for approving activation of users of the application.</description>
        <inlineHelpText>Person responsible for approving activation of users of the application.</inlineHelpText>
        <label>Application User Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Description__c</fullName>
        <label>Application Description</label>
        <length>11000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Application_Name__c</fullName>
        <label>Application Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutoReply_Text__c</fullName>
        <description>Text to include in the BAP Auto-reply email</description>
        <inlineHelpText>Text to include in the BAP Auto-reply email</inlineHelpText>
        <label>AutoReply Text</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Board_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Board Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applications (Board Member)</relationshipLabel>
        <relationshipName>Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Agile Maturity Application</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Satisfaction__c</fullName>
        <label>Customer Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <color>#000000</color>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Highly Dissatisfied</fullName>
                    <color>#FF0000</color>
                    <label>Highly Dissatisfied</label>
                </value>
                <value>
                    <fullName>Slightly Dissatisfied</fullName>
                    <color>#FFFF66</color>
                    <label>Slightly Dissatisfied</label>
                </value>
                <value>
                    <fullName>Satisfied</fullName>
                    <color>#33CC00</color>
                    <label>Satisfied</label>
                </value>
                <value>
                    <fullName>Highly Satisfied</fullName>
                    <color>#A845DC</color>
                    <label>Highly Satisfied</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Availability_Comments__c</fullName>
        <inlineHelpText>Please provide additional requirements for data availability</inlineHelpText>
        <label>Data Availability Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Availability_External_Requirement__c</fullName>
        <description>Does the data need to be exported or integrated into another system? Is searching, bulk upload, etc. required?</description>
        <inlineHelpText>Does the data need to be exported or integrated into another system? Is searching, bulk upload, etc. required?</inlineHelpText>
        <label>Data Availability External Requirement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0: Not Required</fullName>
                </value>
                <value>
                    <fullName>1: Desired if no cost to owner</fullName>
                </value>
                <value>
                    <fullName>2: Required and owner willing to pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EPA_Full_Users__c</fullName>
        <inlineHelpText>Total # of Full Users</inlineHelpText>
        <label>EPA Full Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EPA_Starter_Users__c</fullName>
        <inlineHelpText>Total # of Starter Users (6790 licenses available in the Agency)
Includes accounts, contacts, documents, reports, dashboards, employee cases, ideas and up to 10 custom objects</inlineHelpText>
        <label>EPA Starter Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electronic_Signature_Requirement__c</fullName>
        <description>Electronic signature requirement.</description>
        <inlineHelpText>Electronic signature requirement.</inlineHelpText>
        <label>Electronic Signature Requirement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0: Not Required</fullName>
                </value>
                <value>
                    <fullName>1: Desired if no cost to owner</fullName>
                </value>
                <value>
                    <fullName>2: Required and owner willing to pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FY_16_Usage__c</fullName>
        <label>FY 16 Usage Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FY_17_Usage_Count__c</fullName>
        <label>FY 17 Usage Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Federal_Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project manager at the federal level in the case of projects being managed by a Contractor Project Manager at the contractor level.  For Application Inventory Management.  Timothy Hinds, 2018.08.31.</description>
        <inlineHelpText>Project manager at the federal level in the case of projects being managed by a Contractor Project Manager at the contractor level.</inlineHelpText>
        <label>Federal Project Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applications (Federal Project Manager)</relationshipLabel>
        <relationshipName>Applications_Federal_Project_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Status__c</fullName>
        <label>Financial Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <color>#000000</color>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Over Budget</fullName>
                    <color>#FF0000</color>
                    <label>Over Budget</label>
                </value>
                <value>
                    <fullName>Burning Hot</fullName>
                    <color>#FFFF66</color>
                    <label>Burning Hot</label>
                </value>
                <value>
                    <fullName>On Track</fullName>
                    <color>#33CC00</color>
                    <label>On Track</label>
                </value>
                <value>
                    <fullName>Burning Slow</fullName>
                    <color>#33FFFF</color>
                    <label>Burning Cool</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form_Number__c</fullName>
        <label>Form Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Users__c</fullName>
        <label>Full Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Highly_Formatted_Input_Requirement__c</fullName>
        <description>Highly formatted data entry requirement.</description>
        <inlineHelpText>Highly formatted data entry requirement.</inlineHelpText>
        <label>Highly Formatted Input Requirement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0: Not required</fullName>
                </value>
                <value>
                    <fullName>1: Desired if no cost to owner</fullName>
                </value>
                <value>
                    <fullName>2: Required and owner is willing to pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Highly_Formatted_Output_Requirement__c</fullName>
        <description>Print to .pdf in exactly the same layout of the form?</description>
        <inlineHelpText>Print to .pdf in exactly the same layout of the form?</inlineHelpText>
        <label>Highly Formatted Output Requirement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0: Not Required</fullName>
                </value>
                <value>
                    <fullName>1: Desired if no cost to owner</fullName>
                </value>
                <value>
                    <fullName>2: Required and owner willing to pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>In_Development__c</fullName>
        <description>Indicator that Version In Development contains a value greater than zero</description>
        <formula>NOT(ISBLANK(Version_in_Development__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Version In Development contains a value greater than zero</inlineHelpText>
        <label>In Development</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_Production__c</fullName>
        <description>Indicates that Production Version contains a value greater than zero</description>
        <formula>NOT(ISBLANK(Production_Version__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Production Version contains a value greater than zero</inlineHelpText>
        <label>In Production</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Included_in_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this application included in the BAP Auto-reply email</description>
        <inlineHelpText>Is this application included in the BAP Auto-reply email</inlineHelpText>
        <label>Included in Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_Priority__c</fullName>
        <label>Migration Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1: High Priority - Will Definitely Migrate</fullName>
                </value>
                <value>
                    <fullName>2: Medium Priority - Will Probably Migrate</fullName>
                </value>
                <value>
                    <fullName>3: Low Priority - Probably Will Not Migrate</fullName>
                </value>
                <value>
                    <fullName>0: Not a Priority - Will Not Migrate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Migration_Status__c</fullName>
        <label>Migration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BAP Workflow Under Development</fullName>
                </value>
                <value>
                    <fullName>BAP Workflow Planned</fullName>
                </value>
                <value>
                    <fullName>BAP Downloadable Planned</fullName>
                </value>
                <value>
                    <fullName>FormSmart Downloadable Planned</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Do Not Migrate</fullName>
                </value>
                <value>
                    <fullName>Known</fullName>
                </value>
                <value>
                    <fullName>Orphan</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>11000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Office</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>HR Org</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applications (Office)</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization_Full_Name__c</fullName>
        <formula>Primary_Contact__r.Account.Name</formula>
        <label>Organization Full Name (Primary Contact)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owning_Organization_Full_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Full name of the organization responsible for the application. For Application Inventory Management. Timothy Hinds, 2018.08.31.</description>
        <inlineHelpText>Full name of the organization responsible for the application.</inlineHelpText>
        <label>Owning Organization Full Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applications (Owning Organization Full Name)</relationshipLabel>
        <relationshipName>Applications_Owning_Organization</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PM_Assessment__c</fullName>
        <label>PM Assessment</label>
        <length>11000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <description>Platform that will primarily be hosting the application.</description>
        <inlineHelpText>Platform that will primarily be hosting the application.</inlineHelpText>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Automation Platform</fullName>
                    <default>true</default>
                    <label>Business Automation Platform</label>
                </value>
                <value>
                    <fullName>Oracle Application Express</fullName>
                </value>
                <value>
                    <fullName>Oracle Business Intelligence</fullName>
                </value>
                <value>
                    <fullName>Informatica PowerCenter</fullName>
                </value>
                <value>
                    <fullName>Other (identify in Application Description)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Primary Contact is the application owner. Additional contacts may be added in the application contacts related list.</inlineHelpText>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Production_Version__c</fullName>
        <description>Version Currently in Production, AIM,04.04.19</description>
        <inlineHelpText>Version Currently in Production</inlineHelpText>
        <label>Production Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project Manager responsible for the project.</description>
        <inlineHelpText>Project Manager responsible for the project.</inlineHelpText>
        <label>Project Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applications (Project Manager)</relationshipLabel>
        <relationshipName>Project_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RPIO_Names_Formula__c</fullName>
        <formula>Primary_Contact__r.User__r.CompanyName</formula>
        <label>RPIO Name (Primary Contact)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Application_Name__c</fullName>
        <formula>BLANKVALUE(Application_Name__c, Related_Application__r.Application_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Application Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Application</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Software Application</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Application Management</relationshipLabel>
        <relationshipName>Application_Metrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Frequency__c</fullName>
        <description>Agile Maturity Application</description>
        <inlineHelpText>The team delivers working software into the production environment frequently.</inlineHelpText>
        <label>Release Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 : infrequent (3+ months)</fullName>
                    <default>true</default>
                    <label>1 : infrequent (3+ months)</label>
                </value>
                <value>
                    <fullName>2 :</fullName>
                </value>
                <value>
                    <fullName>3 : frequent (1-3 weeks)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Responsible_Org__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Responsible Org</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>HR Org</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applications (Responsible Org)</relationshipLabel>
        <relationshipName>Object_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_Objects_Used__c</fullName>
        <label>Salesforce Objects Used</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AcceptedEventRelation</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>AccountContactRelation</fullName>
                </value>
                <value>
                    <fullName>AccountContactRole</fullName>
                </value>
                <value>
                    <fullName>AccountFeed</fullName>
                </value>
                <value>
                    <fullName>AccountHistory</fullName>
                </value>
                <value>
                    <fullName>Accounting Lines</fullName>
                </value>
                <value>
                    <fullName>AccountPartner</fullName>
                </value>
                <value>
                    <fullName>AccountShare</fullName>
                </value>
                <value>
                    <fullName>ActionLinkGroupTemplate</fullName>
                </value>
                <value>
                    <fullName>ActionLinkTemplate</fullName>
                </value>
                <value>
                    <fullName>ActivityHistory</fullName>
                </value>
                <value>
                    <fullName>AdditionalNumber</fullName>
                </value>
                <value>
                    <fullName>Adjustment__c</fullName>
                </value>
                <value>
                    <fullName>AggregateResult</fullName>
                </value>
                <value>
                    <fullName>Announcement</fullName>
                </value>
                <value>
                    <fullName>ApexClass</fullName>
                </value>
                <value>
                    <fullName>ApexComponent</fullName>
                </value>
                <value>
                    <fullName>ApexEmailNotification</fullName>
                </value>
                <value>
                    <fullName>ApexLog</fullName>
                </value>
                <value>
                    <fullName>ApexPage</fullName>
                </value>
                <value>
                    <fullName>ApexPageInfo</fullName>
                </value>
                <value>
                    <fullName>ApexTestQueueItem</fullName>
                </value>
                <value>
                    <fullName>ApexTestResult</fullName>
                </value>
                <value>
                    <fullName>ApexTestResultLimits</fullName>
                </value>
                <value>
                    <fullName>ApexTestRunResult</fullName>
                </value>
                <value>
                    <fullName>ApexTestSuite</fullName>
                </value>
                <value>
                    <fullName>ApexTrigger</fullName>
                </value>
                <value>
                    <fullName>AppDefinition</fullName>
                </value>
                <value>
                    <fullName>Application__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesforce_Record_Types_Used__c</fullName>
        <label>Salesforce Record Types Used</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agile Maturity Assessment FITARA Review</fullName>
                </value>
                <value>
                    <fullName>Agile Maturity Assessment Portfolio Review</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>BAP Admin Cases</fullName>
                </value>
                <value>
                    <fullName>BAP De-Provisioning</fullName>
                </value>
                <value>
                    <fullName>BAP Provisioning</fullName>
                </value>
                <value>
                    <fullName>Bristol Bay</fullName>
                </value>
                <value>
                    <fullName>Cash Contribution</fullName>
                </value>
                <value>
                    <fullName>Document - Bankcard Purchase</fullName>
                </value>
                <value>
                    <fullName>Document - Contract</fullName>
                </value>
                <value>
                    <fullName>Document - Grant</fullName>
                </value>
                <value>
                    <fullName>Document - IA</fullName>
                </value>
                <value>
                    <fullName>Document - Other</fullName>
                </value>
                <value>
                    <fullName>Document - Travel</fullName>
                </value>
                <value>
                    <fullName>Dummy Account</fullName>
                </value>
                <value>
                    <fullName>EITA</fullName>
                </value>
                <value>
                    <fullName>EPA-100</fullName>
                </value>
                <value>
                    <fullName>EPA-3160-6v5</fullName>
                </value>
                <value>
                    <fullName>EPA-3160-6v5_old_delete</fullName>
                </value>
                <value>
                    <fullName>EPA Person</fullName>
                </value>
                <value>
                    <fullName>Ethics Intake Tracking</fullName>
                </value>
                <value>
                    <fullName>Form</fullName>
                </value>
                <value>
                    <fullName>Form - EPA-100 Line Item</fullName>
                </value>
                <value>
                    <fullName>Form - Sample Record Type Line Item</fullName>
                </value>
                <value>
                    <fullName>Form - TCTO Request Line Item</fullName>
                </value>
                <value>
                    <fullName>FRS</fullName>
                </value>
                <value>
                    <fullName>FTTA Agreement/Amendment</fullName>
                </value>
                <value>
                    <fullName>FTTA License</fullName>
                </value>
                <value>
                    <fullName>FTTA Licensee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sandbox_Name_Formula__c</fullName>
        <formula>Sandbox__r.Name__c</formula>
        <label>Sandbox Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sandbox_Name__c</fullName>
        <description>deprecated</description>
        <inlineHelpText>Enter in the name of the Sandbox that was granted for the prospect application</inlineHelpText>
        <label>Sandbox Name_deprecated</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sandbox__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Sandbox Location</inlineHelpText>
        <label>Sandbox</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Forms__c.Form_Type__c</field>
                <operation>equals</operation>
                <value>Developer Sandbox</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Forms__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Sandbox</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <label>Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <color>#000000</color>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Significantly Behind</fullName>
                    <color>#FF0000</color>
                    <label>Significantly Behind</label>
                </value>
                <value>
                    <fullName>Slightly Behind</fullName>
                    <color>#FFFF66</color>
                    <label>Slightly Behind</label>
                </value>
                <value>
                    <fullName>On Schedule</fullName>
                    <color>#33CC00</color>
                    <label>On Schedule</label>
                </value>
                <value>
                    <fullName>Ahead</fullName>
                    <color>#A845DC</color>
                    <label>Ahead</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standard_Form_Number__c</fullName>
        <label>Standard Form Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Starter_Users__c</fullName>
        <label>Starter Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_By_Formula__c</fullName>
        <formula>LastModifiedBy.FirstName  &amp; ' ' &amp; LastModifiedBy.LastName</formula>
        <label>Status By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Status By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Date_Formula__c</fullName>
        <formula>LastModifiedDate</formula>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Narrative__c</fullName>
        <label>Status Narrative</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Production (Stable)</fullName>
                    <color>#A845DC</color>
                    <label>In Production (Stable)</label>
                </value>
                <value>
                    <fullName>In Production and Development</fullName>
                </value>
                <value>
                    <fullName>In Development</fullName>
                    <color>#3366FF</color>
                    <label>In Development</label>
                </value>
                <value>
                    <fullName>In Planning</fullName>
                    <color>#FFCC66</color>
                    <label>In Planning</label>
                </value>
                <value>
                    <fullName>On Hold per Customer</fullName>
                    <color>#CC0000</color>
                    <label>On Hold per Customer</label>
                </value>
                <value>
                    <fullName>Candidate</fullName>
                    <color>#66CCCC</color>
                    <default>true</default>
                    <label>Candidate</label>
                </value>
                <value>
                    <fullName>Improbable</fullName>
                    <color>#666666</color>
                    <label>Improbable</label>
                </value>
                <value>
                    <fullName>Deferred/Cancelled</fullName>
                    <color>#000000</color>
                    <label>Deferred/Cancelled</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>